{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 75,
  "lineage": "914b777b-52d0-b1f5-fa6d-4ccb8a3d45c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b757900b3ff88c14",
            "domain": "vpc",
            "id": "eipalloc-0b757900b3ff88c14",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-209-165-219.compute-1.amazonaws.com",
            "public_ip": "54.209.165.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tera-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:internet-gateway/igw-045bdf958b6b35e39",
            "id": "igw-045bdf958b6b35e39",
            "owner_id": "311061502044",
            "tags": {
              "Name": "tera-gw"
            },
            "tags_all": {
              "Name": "tera-gw"
            },
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tera-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b757900b3ff88c14",
            "connectivity_type": "public",
            "id": "nat-084b4c7ed7e63a2b6",
            "network_interface_id": "eni-092c32c6bce55a01b",
            "private_ip": "10.0.0.25",
            "public_ip": "54.209.165.219",
            "subnet_id": "subnet-0a85e01b1476ddd83",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.pub_2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:route-table/rtb-093a7b6c8042d9f8c",
            "id": "rtb-093a7b6c8042d9f8c",
            "owner_id": "311061502044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-084b4c7ed7e63a2b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-RT"
            },
            "tags_all": {
              "Name": "pri-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.tera-nat",
            "aws_subnet.pub_2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:route-table/rtb-0918bcc43652ca828",
            "id": "rtb-0918bcc43652ca828",
            "owner_id": "311061502044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045bdf958b6b35e39",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-RT"
            },
            "tags_all": {
              "Name": "pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tera-gw",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d98966e0b552977",
            "route_table_id": "rtb-0918bcc43652ca828",
            "subnet_id": "subnet-07ceb86494ee942d8"
          },
          "dependencies": [
            "aws_internet_gateway.tera-gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub_1",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ba110c71afb9282",
            "route_table_id": "rtb-0918bcc43652ca828",
            "subnet_id": "subnet-0a85e01b1476ddd83"
          },
          "dependencies": [
            "aws_internet_gateway.tera-gw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub_2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c412c97de5344125",
            "route_table_id": "rtb-093a7b6c8042d9f8c",
            "subnet_id": "subnet-0cda13e151a46bfdb"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.tera-nat",
            "aws_route_table.pri-rt",
            "aws_subnet.pri_1",
            "aws_subnet.pub_2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apr2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b793fc7978f5b49",
            "route_table_id": "rtb-093a7b6c8042d9f8c",
            "subnet_id": "subnet-068cad6140a5cfd83"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.tera-nat",
            "aws_route_table.pri-rt",
            "aws_subnet.pri_2",
            "aws_subnet.pub_2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:subnet/subnet-0cda13e151a46bfdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cda13e151a46bfdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311061502044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-1"
            },
            "tags_all": {
              "Name": "pri-1"
            },
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:subnet/subnet-068cad6140a5cfd83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068cad6140a5cfd83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311061502044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-2"
            },
            "tags_all": {
              "Name": "pri-2"
            },
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:subnet/subnet-07ceb86494ee942d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ceb86494ee942d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311061502044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_1"
            },
            "tags_all": {
              "Name": "pub_1"
            },
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:subnet/subnet-0a85e01b1476ddd83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a85e01b1476ddd83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311061502044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_1"
            },
            "tags_all": {
              "Name": "pub_1"
            },
            "vpc_id": "vpc-073d8ca57b45f619c"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tera-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311061502044:vpc/vpc-073d8ca57b45f619c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0bbd962b9d3d5e801",
            "default_route_table_id": "rtb-03236eb17bb5cdd7f",
            "default_security_group_id": "sg-00a541f297beff41d",
            "dhcp_options_id": "dopt-0a474d08bf5adabd3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073d8ca57b45f619c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03236eb17bb5cdd7f",
            "owner_id": "311061502044",
            "tags": {
              "Name": "tera-vpc"
            },
            "tags_all": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    }
  ]
}